<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yadira.contacto.MainActivity">

    <TextView
        android:id="@+id/labelnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nombre"/>
    <EditText
        android:id="@+id/txtnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelnombre"/>
    <TextView
        android:id="@+id/labelfecnac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_fechnac"
        android:layout_below="@+id/txtnombre"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/labelfecnac"
        android:id="@+id/liner">
        <DatePicker
            android:id="@+id/datePicker2"
            android:layout_width="wrap_content"
            android:layout_height="133dp"

            android:calendarViewShown="false"
            android:padding="-40dp"
            android:scaleY="0.5"
            android:scaleX="0.5"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/labeltelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_telefono"
        android:layout_below="@+id/liner"/>
    <EditText
        android:id="@+id/txttelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labeltelefono"/>
    <TextView
        android:id="@+id/labelemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        android:layout_below="@+id/txttelefono"/>
    <EditText
        android:id="@+id/txtemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelemail"/>
    <TextView
        android:id="@+id/labeldescripction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_descripcion"
        android:layout_below="@+id/txtemail"/>
    <EditText
        android:id="@+id/txtdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labeldescripction"
        />

    <Button
        android:text="Siguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonguarda"
        android:layout_below="@+id/txtdescription"
        />

</RelativeLayout>
